fix: calender getting cut off on mobile

--- a/Components/App/App.module.css
+++ b/Components/App/App.module.css
@@ -202,7 +202,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 20px 20px 0;
+  margin: 0 10px 10px 0;
+  min-width: 400px;
 
 }
 
